--- a/doc/Makefile
+++ b/doc/Makefile
@@ -50,6 +50,8 @@ help:
 
 clean:
 	rm -rf $(BUILDDIR)/*
+	rm -rf auto_examples/
+	rm -rf modules/generated/*
 
 html:
 	$(SPHINXBUILD) -b html $(ALLSPHINXOPTS) $(BUILDDIR)/html
