Change git@ to https:// in gitmodules

--- a/.gitmodules
+++ b/.gitmodules
@@ -5,6 +5,6 @@
 	ignore = dirty
 [submodule "doc/_themes/sphinx_rtd_theme"]
 	path = doc/_themes/sphinx_rtd_theme
-	url = git@github.com:QuantumElephant/sphinx_rtd_theme.git
+	url = https://github.com/QuantumElephant/sphinx_rtd_theme.git
 	branch = chemtools
 	ignore = dirty
