change sphinx-gallery to a submodule
1. remove all sphinx_gallery contents from repo
2. add sphinx-gallery as a submodule, located at doc/sphinxext/
3. add sphinxext/sphinx-gallery to conf.py
4. add sphinx-gallery to ignore list when compile html

--- a/.gitmodules
+++ b/.gitmodules
@@ -8,3 +8,8 @@
 	url = https://github.com/QuantumElephant/sphinx_rtd_theme.git
 	branch = chemtools
 	ignore = dirty
+[submodule "doc/sphinxext/sphinx-gallery"]
+        path = doc/sphinxext/sphinx-gallery
+        url = https://github.com/QuantumElephant/sphinx-gallery.git
+        branch = chemtools
+        ignore = dirty
