Add conda-forge channel to get git-lfs & bibtex

--- a/.travis.yml
+++ b/.travis.yml
@@ -93,6 +93,7 @@ install:
 # Configure conda and get a few essentials
 - conda config --set always_yes yes
 - conda config --add channels theochem
+- conda config --add channels conda-forge
 - conda install -q conda conda-build
 
 # Set the version info from the git tag
