Remove make html from .tarvis.yml as doc fails
We couldn't figure out why building the documentation fails on travis,
so for the time being we skip this step.

--- a/.travis.yml
+++ b/.travis.yml
@@ -159,9 +159,9 @@ script:
 # ----------------
 
 # Compile documentation
-- if [[ -e doc ]]; then
-    (cd doc; make html);
-  fi
+# - if [[ -e doc ]]; then
+#     (cd doc; make html);
+#   fi
 
 after_success:
 # Upload the coverage analysis
