Exclude script files from import check

--- a/.cardboardlint.yml
+++ b/.cardboardlint.yml
@@ -1,6 +1,7 @@
 linters:
 - import:
     packages: ['chemtools']
+    filefilter: ['- scripts/*.py']
 - namespace:
     filefilter: ['- */__init__.py', '- */test_*.py', '- *setup.py', '- tools/*', '- examples/*/*.py', '- scripts/*.py',
                  '+ *.py', '+ */*.py']
