Totally remove context
1. Remove all context function from modules and tests
2. Remove all related functions from utils.utils
3. Rewrite setup.py and tested
ref:https://github.com/QuantumElephant/chemtools/issues/218

--- a/tools/conda.recipe/meta.yaml
+++ b/tools/conda.recipe/meta.yaml
@@ -18,6 +18,7 @@ requirements:
     - horton
     - matplotlib
     - nose
+    - importlib_resources
   build:
     - python
     - numpy
@@ -32,6 +33,7 @@ requirements:
     - pil
     - mayavi
     - setuptools
+    - importlib_resources
 
 about:
   dev_url: https://github.com/QuantumElephant/chemtools
