--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
-data/examples/images/** filter=lfs diff=lfs merge=lfs -text
-data/examples/** filter=lfs diff=lfs merge=lfs -text
+chemtools/data/examples/images/** filter=lfs diff=lfs merge=lfs -text
+chemtools/data/examples/** filter=lfs diff=lfs merge=lfs -text
