Update filefilter of carboardlint namespace linter

--- a/.cardboardlint.yml
+++ b/.cardboardlint.yml
@@ -4,7 +4,7 @@ linters:
     filefilter: ['- scripts/*.py']
 - namespace:
     filefilter: ['- */__init__.py', '- */test_*.py', '- *setup.py', '- tools/*', '- examples/*/*.py', '- scripts/*.py',
-                 '+ *.py', '+ */*.py']
+                 '+ *.py', '+ */*.py', '*.conf']
 - pylint:
     config: .pylintrc
 - pycodestyle:
