Add pytest alongside nose

--- a/tools/conda.recipe/meta.yaml
+++ b/tools/conda.recipe/meta.yaml
@@ -18,6 +18,7 @@ requirements:
     - horton
     - matplotlib
     - nose
+    - pytest
     - importlib_resources
   build:
     - python
@@ -26,6 +27,7 @@ requirements:
     - sympy
     - matplotlib
     - nose
+    - pytest
     - horton
     - git-lfs
     - sphinxcontrib-bibtex
